# deoxys-core

./: COMPLIANCE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs  iOS_BUILD_GUIDE.md
src/: crypto.rs  ffi.rs  invariants.rs  main.rs  rik.rs  substrate.rs
