[package]
name = "deoxys-core"
version = "2.0.0"
edition = "2021"
authors = ["Alexis Adams <sovereign@axiomhive.net>"]
description = "Deoxys Hegemony Forge V2.0 - Deterministic AI Control System with 20Hz RIK God Loop, Zero Entropy Law, CKKS FHE, and Lyapunov Stability Enforcement"
license = "Proprietary"
repository = "https://github.com/AXI0MH1VE/deoxys-core"
homepage = "https://www.axiomhive.net"
readme = "README.md"
keywords = ["ai", "deterministic", "verification", "cryptography", "control-systems"]
categories = ["algorithms", "cryptography", "science"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ndarray = "0.15"
# Using concrete-core for FHE (Mock-free implementation requires specific version pinning)
# In a real environment, verify compatibility with your hardware AVX512 support
concrete-core = "1.0.0" 
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
lazy_static = "1.4"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
codegen-units = 1
